# widgitron

./: .gitignore  CHANGELOG.md  LICENSE  README.md  add_startup.py  index.html  package.json  pnpm-lock.yaml  requirements.txt  vite.config.ts  widgitron.py
configs/: gpu_monitor.example.json  gpu_monitor.json  paper_deadline.json  widgitron.json
core/: __init__.py  applications_page.py  desktop_widget.py  settings_page.py  system_tray.py  ui_components.py  ui_manager.py  ui_styles.py  widget_manager.py  window_manager.py
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/configs/: gpu_monitor.json  paper_deadline.json
src-tauri/src/: lib.rs  main.rs  test_win.rs
widgets/: __init__.py  gpu_monitor.py  paper_deadline.py
